# netwatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  README.md  mkube-issue.md  netwatch.toml
deploy/: netwatch.toml  pod.yaml  stormd-config.toml
src/: alert.rs  config.rs  db.rs  discovery.rs  dns.rs  lib.rs  main.rs  models.rs  monitor.rs  snmp.rs  topo.rs
src/web/: api.rs  mod.rs  pages.rs  ws.rs
static/: app.js  map.js  style.css
templates/: alerts.html  alerts_table.html  base.html  dashboard.html  device_detail.html  devices.html  devices_table.html  discovery.html  infrastructure.html  map.html  performance.html  services.html  services_table.html  settings.html
